feat(ui): 实现左侧栏折叠功能与Minecraft风格按钮
- 添加左侧栏折叠/展开动画效果（宽度缓动 + 内容淡入淡出）
- 新增折叠状态全局管理（sidebarCollapsed）
- 实现折叠手柄绘制（窄条 + ">" 图标提示）
- 统一面板背景与边框样式，增强视觉一致性
- 引入Minecraft风格按钮组件（drawMinecraftButton）
- 优化Tab标签绘制逻辑，增加选中状态高亮
- 调整面板间距与透明度，改善整体界面表现
- 更新鼠标交互区域判定逻辑，支持折叠状态点击展开
- 重构输入路由机制，提升UI响应准确性
- 移除冗余代码，精简面板基类结构